# stowage

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  flake.nix  openapi.yaml  run_tarpaulin_wsl.sh  test.http  test_stowage.ps1
.data/: example.json
.data/.dup/: example.json
.github/workflows/: docker-image.yml
src/: config.rs  db_utils.rs  file_utils.rs  handlers.rs  lib.rs  main.rs  multipart_utils.rs  worker.rs
tests/: integration_test.rs
