[package]
name = "stowage"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.4", features = ["macros"] }
actix-files = "0.6.2"
actix-multipart = "0.6"
actix-cors = "0.7"
actix-rt = "2.9"
uuid = { version = "1.4", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
bytes = "1.4"
mime = "0.3"
mime_guess = "2.0"
chrono = { version = "0.4", features = ["serde"] }
futures-util = { version = "0.3", features = ["std"] }
tokio-util = { version = "0.7", features = ["io"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
tokio-sync = "0.1"
futures = "0.3"
infer = "0.19.0"
sha2 = "0.10"
 r2d2 = "0.8"
 r2d2_sqlite = "0.24"
rusqlite = { version = "0.31", features = ["bundled"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dev-dependencies]
tempfile = "3.10"
